started afternoon reflection

--- a/2023-05/2023-05–29.md
+++ b/2023-05/2023-05–29.md
@@ -15,3 +15,12 @@ Attachments/images will be a later issue.
 Love is in the air - Stella Donnelly
 Good rendition that brings back feelings of nostalgia.
 
+## This Afternoon
+Was tough.
+Had an afternoon meeting which was ostensibly meant to be about documentation.
+After a little while the meeting devolved into a criticism of our current software architecture.
+The feedback received around a lack of clarity around what was actually running in production was fair enough.
+What was disappointing is the perceived lack of confidence that we (I) now have.
+We have not failed to deliver on the expected outcomes to date.
+
+
